--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -23,8 +23,9 @@ security:
                 enable_csrf: true
             logout:
                 path: app_logout
-                # where to redirect after logout
-                # target: app_any_route
+            access_denied_url: /accesinterdit
+              # where to redirect after logout
+            # target: app_any_route
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -35,7 +36,8 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-#         - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/creationCommissionTemporaire, roles: [ROLE_ADMIN, ROLE_PRIVILEGED] }
         - { path: ^/login$, role: PUBLIC_ACCESS }
         - { path: ^/register, role: PUBLIC_ACCESS }
         - { path: ^/, roles: [ROLE_USER, ROLE_ADMIN, ROLE_PRIVILEGED] }
